kubernetes/main/apps/home-automation/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
spec:
  ingressClassName: "nginx"
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: MQTT Broker
    gethomepage.dev/group: Home Automation
    gethomepage.dev/icon: sh-mqtt.svg
    gethomepage.dev/name: EMQX
  rules:
    - host: &host emqx.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
  tls:
    - hosts:
        - *host
